human-gov-application/src/humangov-texas.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-app-texas
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-app-texas
  template:
    metadata:
      labels:
        app: humangov-python-app-texas
    spec:
      serviceAccountName: humangov-pod-execution-role
      containers:
      - name: humangov-python-app-texas 
        image: public.ecr.aws/d7r6q9j6/humangov-app:latest 
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-app-texas-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: humangov-python-app-texas
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: humangov-python-nginx-texas
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humangov-python-nginx-texas
  template:  
    metadata:
      labels:
        app: humangov-python-nginx-texas
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: humangov-python-app-texas-nginx-config

---
apiVersion: v1
kind: Service
metadata:
  name: humangov-python-nginx-texas-service
  namespace: default
spec: 
  type: ClusterIP
  selector:
    app: humangov-python-nginx-texas
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
